--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest --passWithNoTests --maxWorkers=50%",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -18,6 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -27,6 +31,8 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
     "tailwindcss": "^4",
