--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
