test: add initial tests and configure lint staged

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix",
+      "npm test -- --findRelatedTests"
     ]
   }
 }
