--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
     "typescript": "^5",
