--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --passWithNoTests --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
     "test:ci": "jest --runInBand",
+    "generate": "npx plop --plopfile generators/plopfile.js",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
@@ -53,6 +54,7 @@
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.5.0",
     "playwright": "^1.51.1",
+    "plop": "^4.0.1",
     "prettier": "3.5.3",
     "storybook": "^8.6.7",
     "typescript": "^5",
