--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "next": "15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "styled-components": "^6.1.16"
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "styled-components": "^5.3.11",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
@@ -40,8 +46,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/styled-components": "^5.1.34",
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "eslint-config-prettier": "^10.1.1",
@@ -57,6 +66,7 @@
     "plop": "^4.0.1",
     "prettier": "3.5.3",
     "storybook": "^8.6.7",
+    "ts-jest": "^29.3.1",
     "typescript": "^5",
     "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.9"
