chore(icons): install @styled-icons/material-outlined for icon support

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "styled-components": "^5.3.11",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "@styled-icons/material-outlined": "^10.47.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.0",
