--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@styled-icons/material-outlined": "^10.47.0",
+    "@styled-icons/remix-fill": "^10.46.0",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "styled-components": "^5.3.11",
-    "styled-media-query": "^2.1.2",
-    "@styled-icons/remix-fill": "^10.46.0",
-    "@styled-icons/material-outlined": "^10.47.0"
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.0",
@@ -69,6 +69,7 @@
     "prettier": "3.5.3",
     "storybook": "^8.6.7",
     "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.9"
