--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@styled-icons/material-outlined": "^10.47.0",
     "@styled-icons/remix-fill": "^10.46.0",
     "next": "^15.2.4",
+    "polished": "^4.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "styled-components": "^5.3.11",
