--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@styled-icons/material-outlined": "^10.47.0",
+    "@styled-icons/fa-brands": "^10.47.0",
     "@styled-icons/remix-fill": "^10.46.0",
+    "@styled-icons/material-outlined": "^10.47.0",
     "next": "^15.2.4",
     "polished": "^4.3.1",
     "react": "^19.1.0",
