--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "lint": "next lint",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w",
+    "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/client-integration-nextjs": "^0.12.2",
     "@styled-icons/boxicons-regular": "^10.47.0",
     "@styled-icons/boxicons-solid": "^10.47.0",
     "@styled-icons/fa-brands": "^10.47.0",
     "@styled-icons/material-outlined": "^10.47.0",
     "@styled-icons/remix-fill": "^10.46.0",
+    "dotenv": "^17.2.1",
     "next": "^15.2.4",
     "polished": "^4.3.1",
     "react": "^19.1.0",
@@ -39,6 +45,9 @@
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/client-preset": "^4.8.3",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-onboarding": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
@@ -64,6 +73,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
+    "graphql": "^16.11.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -76,7 +86,7 @@
     "storybook": "^8.6.14",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.9"
   },
