chore(codegen): update script and add dotenv-cli for env support

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "compile": "graphql-codegen",
+    "codegen": "dotenv -e .env.local -- graphql-codegen",
     "watch": "graphql-codegen -w",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
@@ -26,7 +26,6 @@
     "@styled-icons/fa-brands": "^10.47.0",
     "@styled-icons/material-outlined": "^10.47.0",
     "@styled-icons/remix-fill": "^10.46.0",
-    "dotenv": "^17.2.1",
     "next": "^15.2.4",
     "polished": "^4.3.1",
     "react": "^19.1.0",
@@ -67,6 +66,8 @@
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "babel-jest": "^29.7.0",
+    "dotenv": "^17.2.1",
+    "dotenv-cli": "^9.0.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "eslint-config-prettier": "^10.1.1",
