--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,16 @@
 name: ci
+
 on: [pull_request]
 
 jobs:
-  build: 
+  build:
     runs-on: ubuntu-latest
-    steps: 
+
+    env:
+      LOCAL_HOST: ${{ secrets.LOCAL_HOST }}
+      LOCAL_PORT: ${{ secrets.LOCAL_PORT }}
+
+    steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -13,7 +19,7 @@ jobs:
         with:
           node-version: 20.x
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm install
 
