--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      LOCAL_HOST: ${{ secrets.LOCAL_HOST }}
-      LOCAL_PORT: ${{ secrets.LOCAL_PORT }}
+      NEXT_PUBLIC_CI: 'true'
+      NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
 
     steps:
       - name: Checkout Repository
